@@ -3,12 +3,14 @@ package com.bakdata.conquery.resources.admin.rest;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.SortedSet;
 import java.util.TreeSet;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import javax.inject.Inject;
@@ -32,6 +34,7 @@ import com.bakdata.conquery.models.datasets.concepts.tree.TreeConcept;
 import com.bakdata.conquery.models.dictionary.Dictionary;
 import com.bakdata.conquery.models.events.CBlock;
 import com.bakdata.conquery.models.identifiable.ids.specific.UserId;
+import com.bakdata.conquery.models.index.IndexKey;
 import com.bakdata.conquery.models.worker.DatasetRegistry;
 import com.bakdata.conquery.models.worker.Namespace;
 import com.bakdata.conquery.resources.admin.ui.model.FrontendAuthOverview;
@@ -42,6 +45,7 @@ import com.bakdata.conquery.resources.admin.ui.model.FrontendUserContent;
 import com.bakdata.conquery.resources.admin.ui.model.ImportStatistics;
 import com.bakdata.conquery.resources.admin.ui.model.TableStatistics;
 import com.bakdata.conquery.resources.admin.ui.model.UIContext;
+import com.google.common.cache.CacheStats;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -70,15 +74,30 @@ public class UIProcessor {
 		return new UIContext(adminProcessor.getNodeProvider());
 	}
 
+	public Set<IndexKey<?>> getLoadedIndexes() {
+		return getAdminProcessor().getLoadedIndexes();
+	}
+
+	public CacheStats getIndexServiceStatistics() {
+		return adminProcessor.getIndexServiceStatistics();
+	}
+
 	public FrontendAuthOverview getAuthOverview() {
 		Collection<FrontendAuthOverview.OverviewRow> overview = new TreeSet<>();
 		for (User user : getStorage().getAllUsers()) {
 			Collection<Group> userGroups = AuthorizationHelper.getGroupsOf(user, getStorage());
-			Set<Role> effectiveRoles = user.getRoles().stream().map(getStorage()::getRole).collect(Collectors.toSet());
-			userGroups.forEach(g -> effectiveRoles.addAll(g.getRoles().stream().map(getStorage()::getRole).sorted().collect(Collectors.toList())));
+			Set<Role> effectiveRoles = user.getRoles().stream()
+										   .map(getStorage()::getRole)
+										   // Filter role_ids that might not map TODO how do we handle those
+										   .filter(Predicate.not(Objects::isNull))
+										   .collect(Collectors.toCollection(HashSet::new));
+			userGroups.forEach(g -> effectiveRoles.addAll(g.getRoles().stream()
+														   .map(getStorage()::getRole)
+														   // Filter role_ids that might not map TODO how do we handle those
+														   .filter(Predicate.not(Objects::isNull))
+														   .sorted().toList()));
 			overview.add(FrontendAuthOverview.OverviewRow.builder().user(user).groups(userGroups).effectiveRoles(effectiveRoles).build());
 		}
-
 		return FrontendAuthOverview.builder().overview(overview).build();
 	}
 
